tests/fixtures/invalid/max_bool_none.py
# Cannot call max() with Bool, None
x = max(True, None)
